Fix page body scss: page body header align not correct

--- a/assets/screen.scss
+++ b/assets/screen.scss
@@ -53,4 +53,31 @@ html, body {
   color:  $white;
 }
 
+// Page body header
+.page-body-header {
+  border-bottom: 1px solid $header-border-grey;
+  padding-bottom: 14px;
+  .page-name {
+    font-size: 24px;
+  }
+}
+
+//Page body: Search section
+.search-section {
+  margin-top: 30px;
+
+  .button-white {
+    height: 30px;
+  }
+
+  .body-dropdown-button {
+    width: 180px;
+    height: 30px;
+  }
+
+  .dropdown-text {
+    text-align: left;
+  }
+}
+
 @import "add_product_page";
